    * 1144 FIX: blade_bx_temp, dell_chassis_temp, emerson_temp, ibm_svc_enclosurestats, ups_bat_temp: rename service description...
            NOTE: Please refer to the migration notes!
    * 1145 FIX: windows_tasks: handle case correctly where task is currently running...
    * 1378 FIX: mk_logwatch: remove exceeding \n when rewriting message and using \0...

    Multisite:
    * 1066 Implemented Dashboard Designer...
    * 1067 FIX: Fixed login problem in LDAP connector when no user filter specified...
    * 1094 FIX: sidebar snaping 'Tree of folders': fixed exception
    * 1154 FIX: Availability: Fixed unwanted redirect to edit annotation page after editing availability options...

    WATO:
    * 1096 New WATO webservices: manage hosts via webinterface...
    * 1155 NagVis map edit/view permissions can now be set using roles...
    * 1064 FIX: Fixed rare issue with WATO communication in distributed setups (different OS versions)...
    * 1089 FIX: Snapshot restore: fixed exception during exception handling......
    * 1091 FIX: logwatch patterns: allow unicode text in pattern comment
    * 1092 FIX: logwatch: now able to enter unicode text into the "Pattern (Regex)" field
    * 0191 FIX: Added swp files to the ignore list for the WATO git feature...
    * 1153 FIX: Changed custom user attributes can now be used immediately...
    * 0201 FIX: Fixed error message in Rulelist of RBN...

    Notifications:
    * 1156 FIX: Graphs in HTML mails are now sent again where they where missing...

    Event Console:
    * 1007 FIX: check_mkevents: fix case where events contain binary zeroes

    HW/SW-Inventory:
    * 0643 windows inventory: OS now contains the install date, reg_uninstall now contains the path...
            NOTE: Please refer to the migration notes!


1.2.5i5:
    Core & Setup:
    * 1012 Fix quoting of backslashes in custom checks with nagios core...
            NOTE: Please refer to the migration notes!
    * 1038 Massive speedup of cmk --snmptranslate