@@ -58,6 +58,7 @@
             NOTE: Please refer to the migration notes!
     * 1145 FIX: windows_tasks: handle case correctly where task is currently running...
     * 1378 FIX: mk_logwatch: remove exceeding \n when rewriting message and using \0...
+    * 1147 FIX: upc_capacity, ups_socomec_capacity: Fix checking of battery left levels...
 
     Multisite:
     * 1066 Implemented Dashboard Designer...
